@@ -19,12 +19,12 @@ median <- function(x, na.rm=FALSE) UseMethod("median")
 median.default <- function(x, na.rm = FALSE)
 {
     if(is.factor(x)) stop("need numeric data")
-    ## all other objects only need sort() & sum() to be working
+    ## all other objects only need sort() & mean() to be working
     if(length(names(x))) names(x) <- NULL # for e.g., c(x = NA_real_)
     if(na.rm) x <- x[!is.na(x)] else if(any(is.na(x))) return(x[FALSE][NA])
     n <- length(x)
     if (n == 0L) return(x[FALSE][NA])
     half <- (n + 1L) %/% 2L
     if(n %% 2L == 1L) sort(x, partial = half)[half]
-    else sum(sort(x, partial = half + 0L:1L)[half + 0L:1L])/2
+    else mean(sort(x, partial = half + 0L:1L)[half + 0L:1L])
 }
